src/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');

:root {
  --font-size: 16px;
  --font-family: Inter, 'Segoe UI';
  --color-background: rgba(38, 42, 44, 95%);
  --color-text: #eee;
  --color-accent: rgba(19, 164, 73, 0.95);
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  font-family: var(--font-family);
}

header,
footer {
  display: flex;
  width: 100vw;
  background-color: var(--color-background);
  color: var(--color-text);
  padding: 10px;
  justify-content: center;
  align-items: center;
}

.colorflip {
  color: var(--color-text);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 70px 50px;
  gap: 15px;
  width: auto;
  height: 100px;
  background: var(--color-background);
}

.flip {
  padding: 10px 30px;
  font-size: 18px;
  border-radius: 8px;
  border-style: none;
  color: var(--color-text);
  background-color: var(--color-background);
  border: 2px solid var(--color-text);
}

.flip:hover {
  background-color: var(--color-accent);
  border: 2px solid var(--color-accent);
  transition: 300ms;
  cursor: pointer;
}

a {
  text-decoration: underline;
  font-weight: 600;
  color: var(--color-text);
}

@media (max-width: 500px) {
  .colorflip {
    width: 100vw;
    padding: 60px 30px;
  }

  h1 {
    font-size: 20px;
  }
}

